--- a/fine-tuning/configs/qlora_style_transfer.yaml
+++ b/fine-tuning/configs/qlora_style_transfer.yaml
@@ -83,10 +83,10 @@ logging_first_step: true
 # wandb_run_id:                # Leave empty for auto-generation
 
 # Special Tokens (Llama 3.1 format)
+# NOTE: Llama 3.1 uses byte-level BPE - no unk_token needed
 special_tokens:
   bos_token: "<|begin_of_text|>"
   eos_token: "<|end_of_text|>"
-  unk_token: "<unk>"
   pad_token: "<|end_of_text|>"
 
 # Chat Template
